--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "retort-js": "^0.0.1-dev.22"
+    "retort-js": "^0.0.4"
   },
   "scripts": {
     "start": "node server.js"
   },
-  "name": "test14",
+  "name": "test16",
   "version": "1.0.0",
   "main": "server.js",
   "keywords": [],
